--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=springboot
+spring.datasource.url=jdbc:mysql://localhost:3306/newdb
+spring.datasource.username=root
+spring.datasource.password=rootroot
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
